[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrgenerator"
version = "0.1.0"
description = "Terminal and CLI QR code generator for URLs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyQRCode",
  "pypng",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
