[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrgenerator"
version = "0.1.0"
description = "Terminal and CLI QR code generator for URLs."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hibob555556" }
]
keywords = ["qr", "qrcode", "cli", "terminal", "generator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "PyQRCode",
  "pypng"
]

[project.urls]
Homepage = "https://github.com/Hibob555556/QRGenerator"
Repository = "https://github.com/Hibob555556/QRGenerator"
Issues = "https://github.com/Hibob555556/QRGenerator/issues"
Changelog = "https://github.com/Hibob555556/QRGenerator/blob/main/CHANGELOG.md"

[project.scripts]
qrgen = "qrgen:main"

[tool.setuptools]
packages = []
py-modules = ["qrgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
