[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickQRForge"
version = "1.2.0"
description = "Terminal and CLI QR code generator for URLs."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hibob555556" }
]
keywords = ["qr", "qrcode", "cli", "terminal", "generator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "qrcode",          # the library actually imported by qrgen.py
  "pillow",          # required by qrcode for image generation
]

[project.urls]
Homepage = "https://github.com/Hibob555556/QRGenerator"
Repository = "https://github.com/Hibob555556/QRGenerator"
Issues = "https://github.com/Hibob555556/QRGenerator/issues"
Changelog = "https://github.com/Hibob555556/QRGenerator/blob/main/CHANGELOG.md"

[project.scripts]
qrgen = "quickqrforge:main"  # primary CLI entry point (module renamed)
qr = "quickqrforge:main"     # convenient short alias

[tool.setuptools]
packages = []
# we provide both names for backwards compatibility; setuptools will build
# both .py files as standalone modules.
py-modules = ["quickqrforge", "qrgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
